Changed some files

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 image: gitpod/workspace-rust
 
 tasks:
-  - init: chmod +x ./OnFileChange.sh && cd KataUnitTest && ../OnFileChange.sh . "cargo test"
-  - command: cd KataUnitTest
+  - init: cd KataUnitTest && cargo test
+  - command: chmod +x ./OnFileChange.sh && cd KataUnitTest && ../OnFileChange.sh . "cargo test"
